--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -16,7 +16,7 @@
 .list.list-inset .item.item-input {
     border-radius: 50px;
     margin-bottom: 15px;
-    padding: 0px 6px 6px 8px !important;
+    padding: 0px 6px 0px 8px !important;
 }
 
 *::-webkit-input-placeholder {
@@ -58,7 +58,7 @@ input,a {
 }
 
 .m-padding {
-	padding: 50px 20px;
+	padding: 25px 25px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -67,9 +67,9 @@ input,a {
 #login-wrapp {
 	background: #0067B1;
     /*height: 100%;*/
-    height:570px;
+    height:510px;
     border-radius: 60px;
-    padding: 50px 20px 40px 20px;
+    padding: 22px 20px 40px 20px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -116,13 +116,13 @@ input,a {
 }
 
 .cerraduraAnimate {
-    -moz-transform: rotate(-25deg) translateX(0px) translateY(25px);
-    -webkit-transform: rotate(-25deg) translateX(0px) translateY(25px);
-    -o-transform: rotate(-25deg) translateX(0px) translateY(25px);
-    -ms-transform: rotate(-25deg) translateX(0px) translateY(25px);
-    transform: rotate(-25deg) translateX(0px) translateY(18px);
+    -moz-transform: rotate3d(0, 0, 1, -38deg)  translate3d(0px,16px,0px);
+    -webkit-transform: rotate3d(0, 0, 1, -38deg)  translate3d(0px,16px,0px);
+    transform: rotate3d(0, 0, 1, -38deg)  translate3d(0px,16px,0px);
     transition: .6s ease-out;
-}
+} /*   -moz-transform: rotate3d( 0, -25deg, 0, 0) translateX(0px) translateY(25px);
+    -webkit-transform: rotate3d( 0, -25deg, 0, 0) translateX(0px) translateY(25px);
+    -o-transform: rotate3d( 0, -25deg, 0, 0) translateX(0px) translateY(25px);*/
 
 .cerradura {
 
@@ -197,4 +197,12 @@ input,a {
     -o-transform: scale(0.05,1) skew(0deg,20deg);
     transform: scale(0.05,1) skew(0deg,20deg);
     transition: all 1s;
+}
+
+.underline {
+    text-decoration: underline !important;
+}
+
+.btn-animate {
+    border-radius: 50%; background:none;border-style: none;
 }
