--- a/www/templates/login-view.html
+++ b/www/templates/login-view.html
@@ -1,14 +1,14 @@
 <ion-view >
-  <ion-content class="padding m-padding principal-background" ng-controller="LogiCtrl as login">
-    <section id="login-wrapp" ng-class ="login.animate.puerta" class="padding door" >
+  <ion-content style="overflow:hidden;"  class="padding m-padding principal-background">
+    <section ng-cloak id="login-wrapp" ng-class ="login.animate.puerta" class="padding door" >
        
     <div id="login">
         <section id="header-logo">
-            <img src="/img/iconoapp.png" class ="center-horizontal" alt="lilotech" width="83" height="80">
+            <img src="img/iconoapp.png" class ="center-horizontal" alt="lilotech" width="83" height="80">
             <center><p class="textwhite">lilotech</p></center>
         </section>
     	
-    	<form action="">
+    	<form >
     		<div class="list list-inset">
                 <label class="item item-input">
                     <input type="text" placeholder="E-mail">
@@ -22,26 +22,20 @@
 
        <div id="button-login-wrapper">
             <div class="right-content">
-                 <button ng-class="login.animate.manilla" ng-click="login.login()"class="mani" style="border-radius: 50%;background:none;border-style: none;padding-right: 8px; "> <img class =""src="/img/manilla.png" class ="" alt="lilotech" width="130" height="80"></button>
+                 <button ng-class="login.animate.manilla" ng-click="login.login()"class=" btn-animate" style="padding-right: 8px; "> <img src="img/manilla.png"  alt="lilotech" width="100" height="60"></button>
             </div>
-       
-
       
             <div class="right-content clear-float" >
-                 <button ng-class="" class="cerradura" style="border-radius: 50%; background:none;border-style: none; padding-right: 0px!important;"> <img class =""src="/img/registrarse.png" class ="" alt="lilotech" width="70" height="63"></button>
+                 <button ng-class="" class="cerradura btn-animate" style="padding-right: 2px!important;"> <img src="img/registrarse.png"  alt="lilotech" width="53" height="46"></button>
             </div>
        </div> 
-       
-               
-
-
                 
        
     </div>
     	
     </section>
     <section>
-    	<a href="#/registro" class=" center-horizontal no-top button textwhite button-dark button-clear button-block ">¿Ha olvidado su contraseña? </a>
+    	<a href="#/registro" class=" underline center-horizontal no-top button textwhite button-dark button-clear button-block ">¿Ha olvidado su contraseña? </a>
     </section>
   </ion-content>
 </ion-view>
