--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,6 +9,14 @@
 
 /**** GLOBAL RULES ****/
 
+.scroll {
+    transform: none !important;
+    height: 100%;
+}
+
+.scroll-content {
+    background-color: #3399ff;
+}
 
 p {
     font-size:26px !important;
@@ -226,7 +234,7 @@ input,a {
     border-radius: 50%; background:none;border-style: none;
 }
 
-/* Home */
+/*---- Home ----*/
 .bar_header{
     height: 70px !important;
 }
@@ -245,3 +253,51 @@ input,a {
     height: 36px;
     width: 36px;
 }
+
+
+.bar-header {
+    height: 70px !important;
+}
+
+.bar-header > h1 {
+    font-size: 25pt !important;
+}
+
+.content-home {
+    padding-top: 70px;
+}
+
+.row {
+    display: list-item !important;
+}
+
+.item-home {
+    width: 100%;
+    height: 100px;
+    background: #0067B1;
+    border-radius: 10px;
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: center; /* Safari 7.0+ */
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.item-home > span {
+    display: table;
+    margin: 0 auto;
+    color: white;
+    font-size: 18pt;
+}
+
+.activate, .activate > span {
+    background-color: white;
+    color: #3399ff;
+}
+
+.col-33{
+    display: inline-table !important;
+}
+
+
+
