--- a/www/source/components/home/homeView.html
+++ b/www/source/components/home/homeView.html
@@ -1,6 +1,6 @@
 <ion-header-bar class="bar-light bar-header">
 	<img src="img/icono_app_Android.png" class="img_head_left button button-clear">
-	<h1 class="nav-bar title">{{home.title}}</h1>
+	<h1 class="nav-bar title"><center>{{home.title}}</center></h1>
 	<img src="img/martillo.png" class="img_head_right button button-clear">
 </ion-header-bar>
 
