--- a/www/source/components/login/loginView.html
+++ b/www/source/components/login/loginView.html
@@ -4,8 +4,9 @@
        
         <div id="login">
             <section id="header-logo">
-                <img src="img/iconoapp.png" class ="center-horizontal" alt="" width="83" height="80">
+                <img ng-src="{{login.imgPath.iconapp}}" class ="center-horizontal" alt="" width="83" height="80">
                 <center><p class="textwhite">lilotech</p></center>
+                
             </section>
             
             <form >
@@ -22,11 +23,11 @@
 
            <div id="button-login-wrapper">
                 <div class="right-content">
-                     <button id="manillaButton" ng-class="login.animate.manilla" ng-click="login.login()"class=" btn-animate" style="padding-right: 8px; "> <img src="img/manilla.png"  alt="" width="100" height="60"></button>
+                     <button id="manillaButton" ng-class="login.animate.manilla" ng-click="login.login()"class=" btn-animate" style="padding-right: 8px; "> <img ng-src="{{login.imgPath.manilla}}"  alt="" width="100" height="60"></button>
                 </div>
           
                 <div class="right-content clear-float" >
-                     <button ng-class="" class="cerradura btn-animate" style="padding-right: 2px!important;"> <img src="img/registrarse.png"  alt="" width="53" height="46"></button>
+                     <button ng-class="" class="cerradura btn-animate" style="padding-right: 2px!important;"> <img ng-src="{{login.imgPath.cerradura}}"  alt="" width="53" height="46"></button>
                 </div>
            </div>
                     
