--- a/www/css/style.css
+++ b/www/css/style.css
@@ -105,7 +105,7 @@ input,a {
 
 
 #login-wrapp {
-    background: #0067B1;
+    background: #006699;
     /*height: 100%;*/
     height:510px;
     border-radius: 60px;
@@ -270,7 +270,7 @@ input,a {
 .item-list {
     width: 100%;
     height: 100px;
-    background: #0067B1;
+    background: #006699;
     border-radius: 10px;
     display: -webkit-flex; /* Safari */
     -webkit-align-items: center; /* Safari 7.0+ */
@@ -332,11 +332,11 @@ label {
 }
 
 .manilla {
-    width: 42%;
+    width: 37%;
 }
 
 .register {
-    width: 20%;
+    width: 16%;
 }
 
 .logo-text {
