--- a/www/source/components/login/loginView_2.html
+++ b/www/source/components/login/loginView_2.html
@@ -14,6 +14,7 @@
                         <div >
                             <img id="manillaButton"  ng-click="login.onClickLogin()"  ng-class="login.animate.manilla" class="manilla" src="img/manilla.png">
                         </div>
+                          <div class="divider-15"></div>
                         <div>
                             <img class="register" src="img/registrarse.png">
                         </div>
