--- a/www/css/style.css
+++ b/www/css/style.css
@@ -400,6 +400,21 @@ label {
 }
 
 
+@media screen and (max-height: 480px) {
+      .manilla {
+        width: 32%;
+    }
+
+    .register {
+        width: 14%;
+    }
+
+    .logo {
+        margin-top: 10px;
+        width: 30%;
+    }
+}
+
 
 
 
