--- a/www/templates/home-view.html
+++ b/www/templates/home-view.html
@@ -2,7 +2,8 @@
 
 	<ion-content class="padding m-padding principal-background" ng-controller="HomeCtrl as home">
   
-	<h2>Welcome to Home</h2>
+		<h2>Welcome to Home</h2>
+		<a href="#/login">ir a login</a>
 
   	</ion-content>
 
