--- a/www/templates/login-view.html
+++ b/www/templates/login-view.html
@@ -1,10 +1,10 @@
 <ion-view >
-  <ion-content class="padding m-padding principal-background" ng-controller="LogiCtrl as login">
+  <ion-content style="overflow: hidden;" class="padding m-padding principal-background" ng-controller="LogiCtrl as login">
     <section id="login-wrapp" ng-class ="login.animate.puerta" class="padding door" >
        
     <div id="login">
         <section id="header-logo">
-            <img src="/img/iconoapp.png" class ="center-horizontal" alt="lilotech" width="83" height="80">
+            <img src="img/iconoapp.png" class ="center-horizontal" alt="lilotech" width="83" height="80">
             <center><p class="textwhite">lilotech</p></center>
         </section>
     	
@@ -22,13 +22,13 @@
 
        <div id="button-login-wrapper">
             <div class="right-content">
-                 <button ng-class="login.animate.manilla" ng-click="login.login()"class="mani" style="border-radius: 50%;background:none;border-style: none;padding-right: 8px; "> <img class =""src="/img/manilla.png" class ="" alt="lilotech" width="130" height="80"></button>
+                 <button ng-class="login.animate.manilla" ng-click="login.login()"class="mani" style="border-radius: 50%;background:none;border-style: none;padding-right: 8px; "> <img src="img/manilla.png" alt="lilotech" width="100" height="60"></button>
             </div>
        
 
       
             <div class="right-content clear-float" >
-                 <button ng-class="" class="cerradura" style="border-radius: 50%; background:none;border-style: none; padding-right: 0px!important;"> <img class =""src="/img/registrarse.png" class ="" alt="lilotech" width="70" height="63"></button>
+                 <button ng-class="" class="cerradura" style="border-radius: 50%; background:none;border-style: none; padding-right: 0px!important;"> <img src="img/registrarse.png" alt="lilotech" width="60" height="53"></button>
             </div>
        </div> 
        
