Vista de detalles y otras funciones

--- a/www/source/components/detail/detailView.html
+++ b/www/source/components/detail/detailView.html
@@ -10,8 +10,26 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="bar bar-footer bar-footer-detail">
-			  	<div class="title">Footer</div>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/palmadas.png" class="icon">
+		      	</a>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/movimiento_mucho.png" class="icon">
+		      	</a>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/consumo_0W.png" class="icon">
+		      	</a>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/luz_full.png" class="icon">
+		      	</a>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/temperatura_mayor0C.png" class="icon">
+		      	</a>
+		      	<a class="tab-item">
+		        <img ng-src="img/sensors/humo.png" class="icon">
+		      </a>
 			</div>
 		</ion-content>
 	</ion-view>
