--- a/www/css/style.css
+++ b/www/css/style.css
@@ -437,6 +437,28 @@ label {
     color: white;
 }
 
+.content-detail {
+    padding-top: 100px;
+}
+
+.item-list-details {
+    width: 100%;
+  
+    border-radius: 10px;
+    display: -webkit-flex; /* Safari */
+    -webkit-align-items: center; /* Safari 7.0+ */
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.label-details{
+    display: table;
+    margin: 0 auto;
+    color: white;
+    font-size: 16pt;
+}
+
 
 @media screen and (min-height: 475px) {
     .manilla {width: 32%;}
