--- a/www/css/style.css
+++ b/www/css/style.css
@@ -437,6 +437,42 @@ label {
     color: white;
 }
 
+#custom_toast {
+    display: block;
+    /*opacity: 0;*/
+
+}
+
+.ionic_toast{
+    font-size: 17px !important;
+}
+.toast-fadein {
+       -webkit-animation: fadein .7s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein .7s; /* Firefox < 16 */
+        -ms-animation: fadein .7s; /* Internet Explorer */
+         -o-animation: fadein .7s; /* Opera < 12.1 */
+            animation: fadein .7s;
+} 
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.toast-hidein {
+       -webkit-animation: hide .9s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: hide .9s; /* Firefox < 16 */
+        -ms-animation: hide .9s; /* Internet Explorer */
+         -o-animation: hide .9s; /* Opera < 12.1 */
+            animation: hide .9s;
+} 
+
+@keyframes hide {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+
 
 @media screen and (min-height: 475px) {
     .manilla {width: 32%;}
