--- a/www/source/components/home/homeView.html
+++ b/www/source/components/home/homeView.html
@@ -3,9 +3,9 @@
 		<ion-content>
 			<div class="content-home">
 				<div class="row">
-					<div class="col col-33" ng-repeat="element in home.elements track by $index">
-						<div ng-class="element.class" class="item-list" ng-if="element.label !== ''" ng-click="home.onClickDetail()">
-							<span>{{element.label}}</span>
+					<div class="col col-33" ng-repeat="room in home.rooms track by $index">
+						<div class="item-list" ng-click="home.onClickDetail(room.Room.id)">
+							<span>{{room.Room.name}}</span>
 						</div>
 					</div>
 				</div>
