--- a/www/source/components/login/loginView.html
+++ b/www/source/components/login/loginView.html
@@ -5,7 +5,7 @@
             <div ng-class ="login.animate.puerta" class="content-login door" >
                 <form class="form-login" novalidate>
                     <div align="center">
-                        <img class="logo" src="img/iconoapp.png">
+                        <img class="logo" ng-src="img/iconoapp.png">
                         <h2 class="logo-text">lilotech</h2>
                         <input class="input-login" type="text" ng-model="login.user.email" placeholder="E-mail">
                         <div class="divider-15"></div>
@@ -13,11 +13,11 @@
                     </div>
                     <div class="row-login" align="right">
                         <div >
-                            <img id="manillaButton"  ng-click="login.onClickLogin()"  ng-class="login.animate.manilla" class="manilla" src="img/manilla.png">
+                            <img id="manillaButton"  ng-click="login.onClickLogin()"  ng-class="login.animate.manilla" class="manilla" ng-src="img/manilla.png">
                         </div>
                           <div class="divider-15"></div>
                         <div>
-                            <img class="register" src="img/registrarse.png">
+                            <img class="register" ng-src="img/registrarse.png">
                         </div>
                     </div>
                 </form>
@@ -28,7 +28,7 @@
         </div>
         <div ng-show="login.cargando" class="loading">
             <div class="content-spinner">
-                <ion-spinner   icon="ripple" class="center-spinner spinner-light"></ion-spinner>       
+                <ion-spinner icon="ripple" class="center-spinner spinner-light"></ion-spinner>       
             </div>          
         </div>
         </ion-content>
