--- a/www/css/style.css
+++ b/www/css/style.css
@@ -487,7 +487,7 @@ label {
     height: 0px;
 }
 
-.bar-footer-detail {
+.bar-footer-principal {
     background : none;
     background-color: #0067B1;
 }
@@ -509,11 +509,11 @@ label {
 
 
 
-.content-detail {
+.content-principal {
     padding-top: 100px;
 }
 
-.item-list-details {
+.item-list-principal {
     width: 100%;
   
     border-radius: 10px;
@@ -524,7 +524,7 @@ label {
     margin-top: 5px;
 }
 
-.label-details{
+.label-principal{
     display: table;
     margin: 0 auto;
     color: white;
