--- a/www/source/components/login/loginView.html
+++ b/www/source/components/login/loginView.html
@@ -22,8 +22,8 @@
                     </div>
                 </form>
             </div>
-            <div align="center">
-                <label class="label-muted"><u>¿Ha olvidado su contraseña?</u></label>
+            <div align="center" class="m-top">
+               <a class=" textwhite underline">¿Ha olvidado su contraseña?<a>
             </div>
         </div>
         <div ng-show="login.cargando" class="loading">
