--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -5,7 +5,7 @@
 			<div class="content-principal">
 				<div class="row">
 					<div class="col col-33" ng-repeat="element in principal.elementsD track by $index">
-						<div ng-class="element.image">
+						<div>
 							<img class="item-list-principal" ng-src="{{element.image}}">
 							<span class="label-principal" ng-class="element.label">{{element.label}}</span>
 						</div>
@@ -16,22 +16,22 @@
 
 			<div class="bar bar-footer bar-footer-principal">
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/palmadas.png" class="icon">
+		        <img src="img/sensors/palmadas.png" width="32" height="32" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/movimiento_mucho.png" class="icon">
+		        <img src="img/sensors/movimiento_mucho.png" width="32" height="32" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/consumo_0W.png" class="icon">
+		        <img src="img/sensors/consumo_0W.png" width="32" height="32" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/luz_full.png" class="icon">
+		        <img src="img/sensors/luz_full.png" width="32" height="32" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/temperatura_mayor0C.png" class="icon">
+		        <img src="img/sensors/temperatura_mayor0C.png" width="32" height="32" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img ng-src="img/sensors/humo.png" class="icon">
+		        <img src="img/sensors/humo.png" width="32" height="32" class="icon">
 		      </a>
 			</div>
 		</ion-content>
