--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -13,6 +13,12 @@
 				</div>
 			</div>
 
+			<!--<button ng-click="principal.aumentar()">
+				prueba
+			</button>
+
+			{{principal.prueba}}-->
+
 
 			<div class="bar bar-footer bar-footer-principal">
 		      	<a class="tab-item">
@@ -33,6 +39,7 @@
 		      	<a class="tab-item">
 		        <img src="img/sensors/humo.png" width="32" height="32" class="icon">
 		      </a>
+
 			</div>
 		</ion-content>
 	</ion-view>
