--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -16,22 +16,22 @@
 
 			<div class="bar bar-footer bar-footer-principal">
 		      	<a class="tab-item">
-		        <img src="img/sensors/palmadas.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/palmadas.png" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/movimiento_mucho.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/movimiento_mucho.png" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/consumo_0W.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/consumo_0W.png" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/luz_full.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/luz_full.png" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/temperatura_mayor0C.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/temperatura_mayor0C.png" class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/humo.png" width="32" height="32" class="icon">
+		        <img data-ng-src="img/sensors/humo.png" class="icon">
 		      </a>
 			</div>
 		</ion-content>
