--- a/www/source/components/home/homeView.html
+++ b/www/source/components/home/homeView.html
@@ -5,7 +5,7 @@
 				<div class="row">
 					<div class="col col-33" ng-repeat="room in home.rooms track by $index">
 						<div class="item-list" ng-click="home.onClickDetail(room.Room.id)">
-							<span>{{room.Room.name}}</span>
+							<span>{{room.Room.name | capitalize}}</span>
 						</div>
 					</div>
 				</div>
