--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -4,7 +4,7 @@
 
 			<div ng-show="!principal.cargando" class="content-principal">
 				<div class="row">
-					<div class="col col-33 delay" ng-repeat="element in principal.applications track by $index">
+					<div class="col col-33 p" ng-repeat="element in principal.applications track by $index">
 						<div ng-click="principal.toggleApp(element)">
 							<img class="item-list-principal" ng-src="{{element.image}}">
 							<center><span class="label-principal" ng-class="element.label">{{element.label}}</span></center>
@@ -18,12 +18,6 @@
                     <ion-spinner icon="ripple" class="center-spinner spinner-light"></ion-spinner>
                 </div>
             </div>
-
-			<!--<button ng-click="principal.aumentar()">
-				prueba
-			</button>
-
-			{{principal.prueba}}-->
 
 
 			<div class="bar bar-footer bar-footer-principal">
@@ -51,9 +45,3 @@
 		</ion-content>
 	</ion-view>
 </ion-content>
-
-<script>
-	filter(function (argument) {
-		 /* body... */ 
-	})
-</script>
