--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -2,16 +2,34 @@
 	<ion-view view-title="Principal">
 		<ion-content>
 
+
+			<!--<ion-slides  options="options" slider="data.slider">-->
+
+
 			<div ng-show="!principal.cargando" class="content-principal">
 				<div class="row">
-					<div class="col col-33 delay" ng-repeat="element in principal.applications track by $index">
+
+					<!--<ion-slide-page>-->
+
+
+					<div class="box col col-33 delay" ng-repeat="element in principal.applications track by $index">
 						<div ng-click="principal.toggleApp(element)">
 							<img class="item-list-principal" ng-src="{{element.image}}">
 							<center><span class="label-principal" ng-class="element.label">{{element.label}}</span></center>
 						</div>
 					</div>
+
+
+					<!--</ion-slide-page>-->
+
 				</div>
 			</div>
+
+
+			<!--</ion-slides>-->
+
+
+
 
 			<div ng-show="principal.cargando" class="loading">
                 <div class="content-spinner">
