--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -14,8 +14,8 @@
 			</div>
 
 			<div ng-show="principal.cargando" class="loading">
-                <div class="content-spinner">
-                    <ion-spinner icon="ripple" class="center-spinner spinner-light"></ion-spinner>
+                <div class="spinner">
+                    <ion-spinner icon="ripple" class="centered-spinner spinner-light"></ion-spinner>
                 </div>
             </div>
 
