--- a/www/source/components/home/homeView.html
+++ b/www/source/components/home/homeView.html
@@ -20,8 +20,8 @@
 			{{home.prueba}}-->
 
 			<div ng-show="home.cargando" class="loading">
-                <div class="content-spinner">
-                    <ion-spinner icon="ripple" class="center-spinner spinner-light"></ion-spinner>
+                <div class="spinner">
+                    <ion-spinner icon="ripple" class="centered-spinner spinner-light"></ion-spinner>
                 </div>
             </div>
 		</ion-content>
