Implementacion de los sensores - Cambio de nombre de imagenes en la cache

--- a/www/source/components/principal/principalView.html
+++ b/www/source/components/principal/principalView.html
@@ -40,26 +40,26 @@
 
 			<div class="bar bar-footer bar-footer-principal">
 		      	<a class="tab-item">
+		        	<img ng-src="{{principal.imgN.srcNoise}}"  class="icon" >
+		      	</a>
 
-		        <img src="img/sensors/palmadas.png"  class="icon">
+		      	<a class="tab-item">
+		        	<img ng-src="{{principal.imgM.srcMovement}}"  class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/movimiento_mucho.png"  class="icon">
+		        	<img ng-src="{{principal.imgP.srcPower}}"  class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/consumo_0W.png"  class="icon">
+		        	<img ng-src="{{principal.imgL.srcLuminosity}}"  class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/luz_full.png"  class="icon">
+		        	<img ng-src="{{principal.imgT.srcTemperature}}"  class="icon">
 		      	</a>
 		      	<a class="tab-item">
-		        <img src="img/sensors/temperatura_mayor0C.png"  class="icon">
+		        	<img ng-src="{{principal.imgS.srcSmoke}}"  class="icon">
 		      	</a>
-		      	<a class="tab-item">
-		        <img src="img/sensors/humo.png"  class="icon">
-		      </a>
-
 			</div>
+			
 		</ion-content>
 	</ion-view>
 </ion-content>
